--- a/.github/workflows/ci-ubuntu-18.yml
+++ b/.github/workflows/ci-ubuntu-18.yml
@@ -19,7 +19,7 @@ jobs:
     container: ubuntu:18.04
     strategy:
       matrix:
-        LLVM_VERSION: ["7.0", "8.0", "9.0", "10.0"]
+        LLVM_VERSION: ["8.0", "9.0", "10.0"]
 
     steps:
       - name: For debugging
