--- a/.github/workflows/ci-ubuntu-20.04.yml
+++ b/.github/workflows/ci-ubuntu-20.04.yml
@@ -19,7 +19,7 @@ jobs:
     container: ubuntu:20.04
     strategy:
       matrix:
-        LLVM_VERSION: ["7.0", "8.0", "9.0", "10.0", "11.0", "12.0", "13.0"]
+        LLVM_VERSION: ["8.0", "9.0", "10.0", "11.0", "12.0"]
 
     steps:
       - name: Install software
