--- a/tools/mull-cxx/CMakeLists.txt
+++ b/tools/mull-cxx/CMakeLists.txt
@@ -3,19 +3,9 @@ set (SOURCES
   ${CMAKE_CURRENT_LIST_DIR}/../CLIOptions/CLIOptions.cpp
 )
 
-if ("LLVM" IN_LIST LLVM_AVAILABLE_LIBS)
-  set (MULL_CXX_LLVM_LIBRARIES
-    LLVM
-  )
-else()
-  set (MULL_CXX_LLVM_LIBRARIES
-    LLVMObject
-  )
-endif()
-
 add_mull_executable(
   NAME mull-cxx-${LLVM_VERSION_MAJOR}
   SOURCES ${SOURCES}
-  LINK_WITH ebc mull ${MULL_CXX_LLVM_LIBRARIES} json11
+  LINK_WITH ebc mull json11 LLVM
 )
 target_include_directories(mull-cxx-${LLVM_VERSION_MAJOR} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../CLIOptions)
