--- a/infrastructure/helpers/build-mull.yaml
+++ b/infrastructure/helpers/build-mull.yaml
@@ -22,13 +22,10 @@
       - -DCMAKE_C_COMPILER={{ cmake_c_compiler }}
       - -DCMAKE_CXX_COMPILER={{ cmake_cxx_compiler }}
       - -DCMAKE_CXX_FLAGS="{{ mull_cxx_flags }}"
-      - "{{ additional_cmake_flags }}"
+      - -DCMAKE_PREFIX_PATH={{ cmake_search_paths }}
       - "{{ source_dir }}"
     chdir: "{{ debug_build_dir }}"
     creates: "{{ debug_build_dir }}/CMakeCache.txt"
-#  environment:
-#    CC: "{{ llvm_dir }}/bin/clang"
-#    CXX: "{{ llvm_dir }}/bin/clang++"
 
 - name: Build Mull (Debug)
   command: ninja {{ item }}
@@ -69,13 +66,10 @@
       - -DCMAKE_CXX_COMPILER={{ cmake_cxx_compiler }}
       - -DCMAKE_CXX_FLAGS="{{ mull_cxx_flags }}"
       - -DMULL_VERSION={{ mull_version }}
-      - "{{ additional_cmake_flags }}"
+      - -DCMAKE_PREFIX_PATH={{ cmake_search_paths }}
       - "{{ source_dir }}"
     chdir: "{{ release_build_dir }}"
     creates: "{{ release_build_dir }}/CMakeCache.txt"
-#  environment:
-#    CC: "{{ llvm_dir }}/bin/clang"
-#    CXX: "{{ llvm_dir }}/bin/clang++"
 
 - name: Build Mull (Release)
   command: ninja {{ item }}
