--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        LLVM_VERSION: ["8.0", "9.0", "11.0", "12.0", "13.0"]
+        LLVM_VERSION: ["9.0", "11.0", "12.0", "13.0"]
 
     steps:
       - uses: actions/checkout@v1
