--- a/tests/fixtures/junk_detection/compdb/compile_commands.json.in
+++ b/tests/fixtures/junk_detection/compdb/compile_commands.json.in
@@ -1,7 +1,7 @@
 [
 {
   "directory": "@DIR@",
-  "command": "clang -I @INC@/include",
+  "command": "clang -I @INC@/include @DIR@/main.cpp",
   "file": "main.cpp"
 }
 ]
