--- a/infrastructure/helpers/variables.yaml
+++ b/infrastructure/helpers/variables.yaml
@@ -113,3 +113,5 @@ llvm_major: "{{ llvm_version.split('.')[0] }}"
 llvm_packages: "{{ llvm_mapping[platform][llvm_version].packages }}"
 cmake_c_compiler: "{{ llvm_mapping[platform][llvm_version].cmake_cc }}"
 cmake_cxx_compiler: "{{ llvm_mapping[platform][llvm_version].cmake_cxx }}"
+test_opt_level: "{{ '-O0' if llvm_major | int > 11 else '-O1' }}"
+test_mull_config: "{{ source_dir }}/infrastructure/helpers/mull.yml"
