Move coverage support to mull-runner

--- a/tools/mull-runner/CMakeLists.txt
+++ b/tools/mull-runner/CMakeLists.txt
@@ -3,6 +3,7 @@ set (SOURCES
   ${CMAKE_CURRENT_LIST_DIR}/MutantExtractor.cpp
   ${CMAKE_CURRENT_LIST_DIR}/DynamicLibraries.cpp
   ${CMAKE_CURRENT_LIST_DIR}/../CLIOptions/CLIOptions.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/CoverageChecker.cpp
 )
 
 add_mull_executable(
