--- a/tools/mull-runner/CMakeLists.txt
+++ b/tools/mull-runner/CMakeLists.txt
@@ -4,6 +4,8 @@ set (SOURCES
   ${CMAKE_CURRENT_LIST_DIR}/DynamicLibraries.cpp
   ${CMAKE_CURRENT_LIST_DIR}/../CLIOptions/CLIOptions.cpp
   ${CMAKE_CURRENT_LIST_DIR}/CoverageChecker.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/MergeInstProfile.cpp
+
 )
 
 add_mull_executable(
