--- a/tests-lit/tests/filters/git-diff/06-reading-git-diff-and-filtering-expands-to-full-path/mull.yml
+++ b/tests-lit/tests/filters/git-diff/06-reading-git-diff-and-filtering-expands-to-full-path/mull.yml
@@ -1,7 +1,9 @@
 gitDiffRef: master
-gitProjectRoot: ./Output/sandbox
+gitProjectRoot: .
 mutators:
   - cxx_ge_to_lt
   - cxx_ge_to_gt
 debugEnabled: true
+debug:
+  gitDiff: true
 quiet: false
