--- a/tests-lit/tests/filters/git-diff/01-reading-git-diff-and-filtering/mull-ir-frontend.yml
+++ b/tests-lit/tests/filters/git-diff/01-reading-git-diff-and-filtering/mull-ir-frontend.yml
@@ -1,7 +1,9 @@
 gitDiffRef: master
-gitProjectRoot: .
+gitProjectRoot: ./Output/sandbox
 mutators:
   - cxx_ge_to_lt
   - cxx_ge_to_gt
 debugEnabled: true
+debug:
+  gitDiff: true
 quiet: false
