--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(mull_unittests_sources
   Helpers/InMemoryFixture.cpp
   Helpers/MutationTestBed.cpp
   Helpers/MutationArtefact.cpp
+  Helpers/BitcodeLoader.cpp
 
   Mutations-E2E/CXX/Arithmetic/Mutation_Arithmetic_Add_Test.cpp
   Mutations-E2E/CXX/Arithmetic/Mutation_Arithmetic_UnaryMinusToNoop_Test.cpp
@@ -17,9 +18,7 @@ set(mull_unittests_sources
   Mutations-E2E/Scalar/01_Mutation_Scalar_ReturnValue_Test.cpp
   Mutations-E2E/Scalar/02_Mutation_Scalar_BinaryOperand_Test.cpp
 
-  DriverTests.cpp
   MutationPointTests.cpp
-  ModuleLoaderTest.cpp
   MutatorsFactoryTests.cpp
 
   TaskExecutorTests.cpp
@@ -57,6 +56,7 @@ target_link_libraries(mull-tests
 target_include_directories(mull-tests PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}
   ${MULL_INCLUDE_DIRS}
+  Helpers
   ${factory_include_dir}
   )
 target_include_directories(mull-tests SYSTEM PRIVATE
@@ -68,4 +68,3 @@ set_target_properties(mull-tests PROPERTIES
   )
 get_property(dependencies GLOBAL PROPERTY TEST_FIXTURES_DEPENDENCIES)
 add_dependencies(mull-tests ${dependencies})
-
