--- a/.github/workflows/mull-20.04.yml
+++ b/.github/workflows/mull-20.04.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           apt-get update
           DEBIAN_FRONTEND=noninteractive TZ=Europe/Berlin apt-get install -y tzdata
-          apt-get install -y git curl cmake ninja-build libz-dev libsqlite3-dev ncurses-dev libxml2-dev uuid-dev liblzma-dev
+          apt-get install -y git curl cmake ninja-build libz-dev libsqlite3-dev ncurses-dev liblzma-dev
           curl -1sLf 'https://dl.cloudsmith.io/public/mull-project/mull-stable/setup.deb.sh' | bash
           apt-get install -y clang-12 libclang-12-dev mull-12=0.15.0
       - uses: actions/checkout@v2
@@ -50,4 +50,3 @@ jobs:
         run: |
           cd build.dir
           mull-runner-12 -reporters=IDE -reporters=GithubAnnotations ./tests/mull-tests
-
