--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -23,7 +23,9 @@ jobs:
       - uses: actions/checkout@v1
         with:
           submodules: true
-
+      - name: Fix git config
+        run: |
+          git config --global --add safe.directory $PWD
       - name: Set build settings
         id: settings
         run: |
@@ -94,4 +96,3 @@ jobs:
         # This step fails sometimes (with ECONNRESET), but I'm not willing to
         # debug it as the main source of packages is Cloudsmith
         continue-on-error: true
-
