--- a/infrastructure/helpers/variables.yaml
+++ b/infrastructure/helpers/variables.yaml
@@ -6,12 +6,18 @@ SDKROOT: /
 
 llvm_mapping:
   macos:
-    13.0.0:
+    14.0.0:
       cmake_search_paths: "/usr/local/opt/llvm/lib/cmake/llvm/;/usr/local/opt/llvm/lib/cmake/clang/"
       packages:
         - llvm
       cmake_cc: /usr/local/opt/llvm/bin/clang
       cmake_cxx: /usr/local/opt/llvm/bin/clang++
+    13.0.0:
+      cmake_search_paths: "/usr/local/opt/llvm@13/lib/cmake/llvm/;/usr/local/opt/llvm@13/lib/cmake/clang/"
+      packages:
+        - llvm@13
+      cmake_cc: /usr/local/opt/llvm@13/bin/clang
+      cmake_cxx: /usr/local/opt/llvm@13/bin/clang++
     12.0.0:
       cmake_search_paths: "/usr/local/opt/llvm@12/lib/cmake/llvm/;/usr/local/opt/llvm@12/lib/cmake/clang/"
       packages:
