--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set (PROJECT_VERSION ${MULL_VERSION})
 set (PROJECT_DESCRIPTION "Practical mutation testing for C and C++")
 set (PROJECT_HOMEPAGE_URL "https://github.com/mull-project/mull")
 set (PROJECT_DOCS_URL "https://mull.readthedocs.io")
+set (PROJECT_SUPPORT_URL "https://mull.readthedocs.io/en/latest/Support.html")
 
 include(${CMAKE_CURRENT_LIST_DIR}/cmake/properties.cmake)
 include(${CMAKE_CURRENT_LIST_DIR}/cmake/fixtures.cmake)
