Use LLVM 14 on macOS explicitly

--- a/infrastructure/helpers/variables.yaml
+++ b/infrastructure/helpers/variables.yaml
@@ -7,11 +7,11 @@ SDKROOT: /
 llvm_mapping:
   macos:
     14.0.0:
-      cmake_search_paths: "/usr/local/opt/llvm/lib/cmake/llvm/;/usr/local/opt/llvm/lib/cmake/clang/"
+      cmake_search_paths: "/usr/local/opt/llvm@14/lib/cmake/llvm/;/usr/local/opt/llvm@14/lib/cmake/clang/"
       packages:
-        - llvm
-      cmake_cc: /usr/local/opt/llvm/bin/clang
-      cmake_cxx: /usr/local/opt/llvm/bin/clang++
+        - llvm@14
+      cmake_cc: /usr/local/opt/llvm@14/bin/clang
+      cmake_cxx: /usr/local/opt/llvm@14/bin/clang++
     13.0.0:
       cmake_search_paths: "/usr/local/opt/llvm@13/lib/cmake/llvm/;/usr/local/opt/llvm@13/lib/cmake/clang/"
       packages:
