--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -35,7 +35,7 @@ Vagrant.configure(2) do |config|
 
     configure_vm("ubuntu16", cfg)
 
-    cfg.vm.provision "shell", inline: "apt-get install -y python"
+    cfg.vm.provision "shell", inline: "apt-get update && apt-get install -y python"
 
     cfg.vm.provision "ansible" do |ansible|
       ansible.verbose = "v"
@@ -53,7 +53,7 @@ Vagrant.configure(2) do |config|
 
     configure_vm("ubuntu18", cfg)
 
-    cfg.vm.provision "shell", inline: "apt-get install -y python"
+    cfg.vm.provision "shell", inline: "apt-get update && apt-get install -y python"
 
     cfg.vm.provision "ansible" do |ansible|
       ansible.verbose = "v"
@@ -64,7 +64,7 @@ Vagrant.configure(2) do |config|
       }
     end
   end
-  
+
 
   config.vm.define "fedora" do |cfg|
     cfg.vm.box = "fedora/29-cloud-base"
