--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -65,6 +65,23 @@ Vagrant.configure(2) do |config|
     end
   end
 
+  config.vm.define "ubuntu20.04" do |cfg|
+    cfg.vm.box = "ubuntu/focal64"
+    cfg.ssh.insert_key = false
+
+    configure_vm("ubuntu20.04", cfg)
+
+    cfg.vm.provision "shell", inline: "apt-get update && apt-get install -y python"
+
+    cfg.vm.provision "ansible" do |ansible|
+      ansible.verbose = "v"
+      ansible.playbook = "ubuntu-playbook.yaml"
+      ansible.extra_vars = {
+        llvm_version: ENV['LLVM_VERSION'] || '12.0.0',
+        gitref: ENV['gitref'] || 'main',
+      }
+    end
+  end
 
   config.vm.define "fedora" do |cfg|
     cfg.vm.box = "fedora/29-cloud-base"
