Check out Mull by default in Ubuntu boxes
Provisioning for the Ubuntu VMs would fail consistently as Mull was
never checked out. Check out the sources by default but allow for
overriding the behavior by setting 'checkout' in the environment.

Note: Other VMs may be suffering from this issues too

--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -61,6 +61,7 @@ Vagrant.configure(2) do |config|
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '10.0.0',
         gitref: ENV['GITREF'] || 'main',
+        checkout: ENV['checkout'] || 'true'
       }
     end
   end
@@ -79,6 +80,7 @@ Vagrant.configure(2) do |config|
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '12.0.0',
         gitref: ENV['gitref'] || 'main',
+        checkout: ENV['checkout'] || 'true'
       }
     end
   end
