--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -3,6 +3,8 @@
 # to upgrade instead of disabling the requirement below.
 Vagrant.require_version ">= 1.7.0"
 
+mull_version = %x(git describe --tags --dirty | tr -d '\n')
+
 def configure_vm(name, config)
   config.vm.provider "virtualbox" do |v|
     v.memory = 8192
@@ -25,6 +27,7 @@ Vagrant.configure(2) do |config|
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '6.0.0',
         gitref: ENV['GITREF'] || 'main',
+        mull_version: ENV['mull_version'] || "#{mull_version}"
       }
     end
   end
@@ -43,7 +46,8 @@ Vagrant.configure(2) do |config|
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '10.0.0',
         gitref: ENV['GITREF'] || 'main',
-        checkout: ENV['checkout'] || 'true'
+        checkout: ENV['checkout'] || 'true',
+        mull_version: ENV['mull_version'] || "#{mull_version}"
       }
     end
   end
@@ -62,7 +66,8 @@ Vagrant.configure(2) do |config|
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '12.0.0',
         gitref: ENV['gitref'] || 'main',
-        checkout: ENV['checkout'] || 'true'
+        checkout: ENV['checkout'] || 'true',
+        mull_version: ENV['mull_version'] || "#{mull_version}"
       }
     end
   end
@@ -82,6 +87,7 @@ Vagrant.configure(2) do |config|
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '6.0.0',
         gitref: ENV['GITREF'] || 'main',
+        mull_version: ENV['mull_version'] || "#{mull_version}"
       }
     end
   end
@@ -106,6 +112,7 @@ Vagrant.configure(2) do |config|
         ansible_python_interpreter: '/usr/local/bin/python',
         make_program: 'gmake',
         gitref: ENV['GITREF'] || 'main',
+        mull_version: ENV['mull_version'] || "#{mull_version}"
       }
     end
   end
@@ -123,6 +130,7 @@ Vagrant.configure(2) do |config|
         llvm_version: ENV['LLVM_VERSION'] || '8.0.0',
         gitref: ENV['GITREF'] || 'main',
         SDKROOT: '/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk',
+        mull_version: ENV['mull_version'] || "#{mull_version}"
       }
     end
 
