Patch up PATH for lit tests
When running provisioning through vagrant, pip installs its packages to
/home/vagrant/.local which is not in PATH when the lit tests are run.
Add it manually.

While this is not required for the github workflows (and probably not
macos either), it shouldn't do any harm

--- a/infrastructure/helpers/lit-tests.yaml
+++ b/infrastructure/helpers/lit-tests.yaml
@@ -3,8 +3,12 @@
   command: ninja tests-lit
   args:
     chdir: "{{ debug_build_dir }}"
+  environment:
+    PATH: /home/vagrant/.local/bin:{{ ansible_env.PATH }}
 
 - name: Run LIT tests (Release)
   command: ninja tests-lit
   args:
     chdir: "{{ release_build_dir }}"
+  environment:
+    PATH: /home/vagrant/.local/bin:{{ ansible_env.PATH }}
