Treat mutants surviving as an error
Surviving mutants would typically indicate insufficient test coverage.
As such, it makes sense for Mull to treat it as an error and exit with a
non-zero status.

This changes the default behavior of mull-runner which up until this
point has exited with zero regardless of how many mutants survived. This
behavior can be "restored" by passing the --allow-surviving CLI argument
to mull-runner.

Since the mutation scores for both fmtlib and openssl are very low, the
--allow-surviving flag is passed when running the integration tests

This does not treat the absence of mutants (i.e. infinite mutation
score) as an error

--- a/infrastructure/helpers/integration-tests.yaml
+++ b/infrastructure/helpers/integration-tests.yaml
@@ -43,7 +43,7 @@
     chdir: "{{ working_dir }}/integration/fmt.build.dir"
 
 - name: Run Mull against fmt
-  command: mull-runner-{{ llvm_major }} {{ working_dir }}/integration/fmt.build.dir/bin/core-test
+  command: mull-runner-{{ llvm_major }} --allow-surviving {{ working_dir }}/integration/fmt.build.dir/bin/core-test
 
 - name: Clone OpenSSL
   git:
@@ -96,4 +96,4 @@
     LD_LIBRARY_PATH: "{{ working_dir }}/integration/openssl"
 
 - name: Run Mull against OpenSSL
-  command: mull-runner-{{ llvm_major }} {{ working_dir }}/integration/openssl/test/bio_enc_test
+  command: mull-runner-{{ llvm_major }} --allow-surviving {{ working_dir }}/integration/openssl/test/bio_enc_test
