--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -1,7 +1,8 @@
-name: CI macOS
+name: macOS 11 CI
 
 env:
   CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 on:
   pull_request:
@@ -12,87 +13,59 @@ on:
       - "**"
 
 jobs:
-  test:
+  macos-11:
     name: LLVM ${{ matrix.LLVM_VERSION }}
     runs-on: macos-11
     strategy:
       matrix:
-        LLVM_VERSION: ["11.0", "12.0", "13.0", "14.0"]
+        LLVM_VERSION: [11, 12, 13, 14]
 
     steps:
-      - uses: actions/checkout@v1
-        with:
-          submodules: true
-      - name: Fix git config
+      - name: Debugging
+        run: |
+          env | sort
+          cat $GITHUB_EVENT_PATH
+
+      - name: Fix git
         run: |
           git config --global --add safe.directory $PWD
-      - name: Set build settings
-        id: settings
-        run: |
-          echo ::set-output name=version::`grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '`
 
-          case $GITHUB_EVENT_NAME in
-            "pull_request")
-              echo ::set-output name=suffix::-pr`grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } '`
-              echo ::set-output name=channel::nightly
-            ;;
-            "push")
-              case $GITHUB_REF in
-                "refs/heads/"*)
-                  echo ::set-output name=suffix::-trunk`git rev-list HEAD --count`
-                  echo ::set-output name=channel::nightly
-                ;;
-                "refs/tags/"*)
-                  echo ::set-output name=suffix::""
-                  echo ::set-output name=channel::stable
-                  if [ `echo $GITHUB_REF | awk -F/ ' { print $3 } '` != `grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '` ];
-                  then
-                    false
-                  fi
-                ;;
-                *)
-                  false
-                ;;
-              esac
-            ;;
-            *)
-              false
-            ;;
-          esac
+      - name: Checkout sources
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+
+      - uses: ./actions/detect-package-metadata
+        id: metadata
+
       - name: Run CI task
         run: |
           pip3 install ansible
           cd infrastructure && \
           ansible-playbook macos-playbook.yaml \
-            -e llvm_version="${{ matrix.LLVM_VERSION }}.0" \
+            -e llvm_version="${{ matrix.LLVM_VERSION }}" \
             -e source_dir=$PWD/.. \
             -e gitref=$GITHUB_SHA \
             -e host=localhost \
             -e SDKROOT=`xcrun -show-sdk-path` \
-            -e mull_version=${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }} \
+            -e mull_version=${{ steps.metadata.outputs.version }}${{ steps.metadata.outputs.suffix }} \
             --verbose
+
       - name: Publish package
         if: env.CLOUDSMITH_API_KEY != null
         run: |
           cloudsmith push raw \
             --name mull-`echo ${{ matrix.LLVM_VERSION }} | awk -F. ' { print $1 } '` \
-            --version ${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }} \
-            mull-project/mull-${{ steps.settings.outputs.channel }} \
+            --version ${{ steps.metadata.outputs.version }}${{ steps.metadata.outputs.suffix }} \
+            mull-project/mull-${{ steps.metadata.outputs.channel }} \
             --tags macos \
             infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.zip
+
       - name: Move package
         run: |
           mkdir -p /tmp/packages
           mv infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.zip /tmp/packages/`cat infrastructure/PACKAGE_FILE_NAME`.zip
-      - name: Attach package to the tag
-        if: contains(github.ref, 'refs/tags/')
-        uses: svenstaro/upload-release-action@v2
+
+      - uses: ./actions/attach-package
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: /tmp/packages/*.zip
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
-        # This step fails sometimes (with ECONNRESET), but I'm not willing to
-        # debug it as the main source of packages is Cloudsmith
-        continue-on-error: true
+          GH_API_KEY: ${{ secrets.GITHUB_TOKEN }}
