--- a/.github/workflows/ci-ubuntu-20.04.yml
+++ b/.github/workflows/ci-ubuntu-20.04.yml
@@ -1,8 +1,8 @@
-name: CI Ubuntu 20.04
+name: Ubuntu 20.04 CI
 
 env:
-  DISTR_REPO: "ubuntu/focal"
   CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 on:
   pull_request:
@@ -13,93 +13,67 @@ on:
       - "**"
 
 jobs:
-  test:
+  ubuntu-20-04:
     name: LLVM ${{ matrix.LLVM_VERSION }}
     runs-on: ubuntu-latest
     container: ubuntu:20.04
     strategy:
       matrix:
-        LLVM_VERSION: ["11.0", "12.0"]
+        LLVM_VERSION: [11, 12]
+    env:
+      DISTR_REPO: "ubuntu/focal"
+      DEBIAN_FRONTEND: noninteractive
 
     steps:
+      - name: Debugging
+        run: |
+          env | sort
+          cat $GITHUB_EVENT_PATH
+
       - name: Install software
         run: |
           apt-get update && apt-get install -y software-properties-common
           add-apt-repository ppa:git-core/ppa
           apt-get update && apt-get install -y python3-pip curl git
           pip3 install ansible
-      - uses: actions/checkout@v2
+
+      - name: Install git
+        run: |
+          apt-get update
+          apt-get install -y git
+          git config --global --add safe.directory $PWD
+
+      - name: Checkout sources
+        uses: actions/checkout@v3
         with:
           submodules: true
-      - name: For debugging
-        run: |
-          env | sort
-      - name: For debugging
-        run: |
-          cat $GITHUB_EVENT_PATH
-      - name: Fix git config
-        run: |
-          git config --global --add safe.directory $PWD
-      - name: Set build settings
-        id: settings
-        run: |
-          echo ::set-output name=version::`grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '`
 
-          case $GITHUB_EVENT_NAME in
-            "pull_request")
-              echo ::set-output name=suffix::-pr`grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } '`
-              echo ::set-output name=channel::nightly
-            ;;
-            "push")
-              case $GITHUB_REF in
-                "refs/heads/"*)
-                  echo ::set-output name=suffix::-trunk`git rev-list HEAD --count`
-                  echo ::set-output name=channel::nightly
-                ;;
-                "refs/tags/"*)
-                  echo ::set-output name=suffix::""
-                  echo ::set-output name=channel::stable
-                  if [ `echo $GITHUB_REF | awk -F/ ' { print $3 } '` != `grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '` ];
-                  then
-                    false
-                  fi
-                ;;
-                *)
-                  false
-                ;;
-              esac
-            ;;
-            *)
-              false
-            ;;
-          esac
+      - uses: ./actions/detect-package-metadata
+        id: metadata
+
       - name: Run CI task
         run: |
           cd infrastructure && \
           ansible-playbook ubuntu-playbook.yaml \
-            -e llvm_version="${{ matrix.LLVM_VERSION }}.0" \
+            -e llvm_version="${{ matrix.LLVM_VERSION }}" \
             -e source_dir=$PWD/.. \
             -e gitref=$GITHUB_SHA \
             -e host=localhost \
-            -e mull_version=${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }} \
+            -e mull_version=${{ steps.metadata.outputs.version }}${{ steps.metadata.outputs.suffix }} \
             --verbose
+
       - name: Publish package
         if: env.CLOUDSMITH_API_KEY != null
         run: |
-          cloudsmith push deb mull-project/mull-${{ steps.settings.outputs.channel }}/${{ env.DISTR_REPO }} infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.deb
+          cloudsmith push deb \
+            mull-project/mull-${{ steps.metadata.outputs.channel }}/${{ env.DISTR_REPO }} \
+            infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.deb
+
       - name: Move package
         run: |
           mkdir -p /tmp/packages
           mv infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.deb /tmp/packages/`cat infrastructure/PACKAGE_FILE_NAME`.deb
-      - name: Attach package to the tag
-        if: contains(github.ref, 'refs/tags/')
-        uses: svenstaro/upload-release-action@v2
+
+      - uses: ./actions/attach-package
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: /tmp/packages/*.deb
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
-        # This step fails sometimes (with ECONNRESET), but I'm not willing to
-        # debug it as the main source of packages is Cloudsmith
-        continue-on-error: true
+          GH_API_KEY: ${{ secrets.GITHUB_TOKEN }}
