--- a/infrastructure/helpers/integration-tests.yaml
+++ b/infrastructure/helpers/integration-tests.yaml
@@ -22,7 +22,7 @@
       - cmake
       - -G
       - Ninja
-      - -DCMAKE_CXX_FLAGS={{ test_opt_level }} -grecord-command-line -fexperimental-new-pass-manager -fpass-plugin=/usr/local/lib/mull-ir-frontend-{{ llvm_major }} --sysroot={{ SDKROOT }}
+      - -DCMAKE_CXX_FLAGS={{ test_opt_level }} -grecord-command-line -fexperimental-new-pass-manager -fpass-plugin=/usr/local/lib/mull-ir-frontend-{{ llvm_version }} --sysroot={{ SDKROOT }}
       - -DCMAKE_BUILD_TYPE=Debug
       - -DCMAKE_C_COMPILER={{ cmake_c_compiler }}
       - -DCMAKE_CXX_COMPILER={{ cmake_cxx_compiler }}
@@ -43,7 +43,7 @@
     chdir: "{{ working_dir }}/integration/fmt.build.dir"
 
 - name: Run Mull against fmt
-  command: mull-runner-{{ llvm_major }} --allow-surviving {{ working_dir }}/integration/fmt.build.dir/bin/core-test
+  command: mull-runner-{{ llvm_version }} --allow-surviving {{ working_dir }}/integration/fmt.build.dir/bin/core-test
 
 - name: Clone OpenSSL
   git:
@@ -61,7 +61,7 @@
       - "{{ test_opt_level }}"
       - -grecord-command-line
       - -fexperimental-new-pass-manager
-      - -fpass-plugin=/usr/local/lib/mull-ir-frontend-{{ llvm_major }}
+      - -fpass-plugin=/usr/local/lib/mull-ir-frontend-{{ llvm_version }}
       - --sysroot={{ SDKROOT }}
     chdir: "{{ working_dir }}/integration/openssl"
     creates: "{{ working_dir }}/integration/openssl/Makefile"
@@ -96,4 +96,4 @@
     LD_LIBRARY_PATH: "{{ working_dir }}/integration/openssl"
 
 - name: Run Mull against OpenSSL
-  command: mull-runner-{{ llvm_major }} --allow-surviving {{ working_dir }}/integration/openssl/test/bio_enc_test
+  command: mull-runner-{{ llvm_version }} --allow-surviving {{ working_dir }}/integration/openssl/test/bio_enc_test
