Add LLVM 16 and drop LLVM 11

--- a/.github/workflows/ci-ubuntu-20.04.yml
+++ b/.github/workflows/ci-ubuntu-20.04.yml
@@ -19,7 +19,7 @@ jobs:
     container: ubuntu:20.04
     strategy:
       matrix:
-        LLVM_VERSION: [11, 12]
+        LLVM_VERSION: [12]
     env:
       DISTR_REPO: "ubuntu/focal"
       DEBIAN_FRONTEND: noninteractive
