--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -59,9 +59,7 @@ if platform.system() == 'Darwin':
 else:
   config.available_features.add('LINUX')
 
-if int(llvm_major_version) > 11:
-  config.substitutions.append(('%pass_mull_ir_frontend', "-fexperimental-new-pass-manager -fpass-plugin=" + mull_ir_frontend))
+if int(llvm_major_version) >= 16:
+  config.substitutions.append(('%pass_mull_ir_frontend', "-fpass-plugin=" + mull_ir_frontend))
 else:
-  # LLVM 9 and 10 doesn't include the pass if no optimizations enabled
-  config.substitutions.append(('%pass_mull_ir_frontend', "-O1 -fexperimental-new-pass-manager -fpass-plugin=" + mull_ir_frontend))
-
+  config.substitutions.append(('%pass_mull_ir_frontend', "-fexperimental-new-pass-manager -fpass-plugin=" + mull_ir_frontend))
