--- a/tools/mull-runner/CMakeLists.txt
+++ b/tools/mull-runner/CMakeLists.txt
@@ -4,7 +4,7 @@ set (SOURCES
   ${CMAKE_CURRENT_LIST_DIR}/DynamicLibraries.cpp
   ${CMAKE_CURRENT_LIST_DIR}/../CLIOptions/CLIOptions.cpp
   ${CMAKE_CURRENT_LIST_DIR}/MergeInstProfile.cpp
-
+  ${CMAKE_CURRENT_LIST_DIR}/ObjectFile.cpp
 )
 
 add_mull_executable(
