--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -1,4 +1,4 @@
-name: macOS 11 CI
+name: macOS CI
 
 env:
   CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
@@ -15,7 +15,7 @@ on:
 jobs:
   macos-11:
     name: LLVM ${{ matrix.LLVM_VERSION }}
-    runs-on: macos-12
+    runs-on: macos-latest
     strategy:
       matrix:
         LLVM_VERSION: [12, 13, 14, 16]
@@ -40,7 +40,7 @@ jobs:
 
       - name: Run CI task
         run: |
-          pip3 install ansible
+          brew install ansible
           cd infrastructure && \
           ansible-playbook macos-playbook.yaml \
             -e llvm_version="${{ matrix.LLVM_VERSION }}" \
