--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -13,7 +13,7 @@ on:
       - "**"
 
 jobs:
-  macos-11:
+  macos:
     name: LLVM ${{ matrix.LLVM_VERSION }}
     runs-on: macos-latest
     strategy:
