--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -1,4 +1,4 @@
-name: Ubuntu 22.04 CI
+name: Ubuntu CI
 
 env:
   CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
@@ -13,16 +13,27 @@ on:
       - "**"
 
 jobs:
-  ubuntu-20-04:
-    name: LLVM ${{ matrix.LLVM_VERSION }}
+  ubuntu:
+    name: Ubuntu ${{ matrix.UBUNTU_VERSION }} LLVM ${{ matrix.LLVM_VERSION }}
     runs-on: ubuntu-latest
-    container: ubuntu:22.04
+    container: ubuntu:${{ matrix.UBUNTU_VERSION }}
     strategy:
       matrix:
-        LLVM_VERSION: [13, 14, 15]
+        UBUNTU_VERSION: ["22.04", "24.04"]
+        LLVM_VERSION: [14, 15]
+        include:
+          - UBUNTU_VERSION: "20.04"
+            LLVM_VERSION: 12
+          - UBUNTU_VERSION: "22.04"
+            LLVM_VERISON: 13
+          - UBUNTU_VERSION: "24.04"
+            LLVM_VERSION: 16
+          - UBUNTU_VERSION: "24.04"
+            LLVM_VERSION: 17
     env:
-      DISTR_REPO: "ubuntu/jammy"
       DEBIAN_FRONTEND: noninteractive
+      # Necessary for Ubuntu 24.04 since PEP 668
+      PIP_BREAK_SYSTEM_PACKAGES: 1
 
     steps:
       - name: Debugging
@@ -32,15 +43,18 @@ jobs:
 
       - name: Install software
         run: |
-          apt-get update && apt-get install -y software-properties-common
-          add-apt-repository ppa:git-core/ppa
-          apt-get update && apt-get install -y python3-pip curl git libunwind8
+          apt-get update && apt-get install --no-install-recommends -y python3-pip curl libunwind8
           pip3 install ansible
+
+      - name: Add git ppa
+        if: matrix.UBUNTU_VERSION != '24.04'
+        run: |
+          apt-get update && apt-get install --no-install-recommends -y gpg-agent software-properties-common
+          add-apt-repository ppa:git-core/ppa
 
       - name: Install git
         run: |
-          apt-get update
-          apt-get install -y git
+          apt-get update && apt-get install --no-install-recommends -y git
           git config --global --add safe.directory $PWD
 
       - name: Checkout sources
@@ -65,8 +79,9 @@ jobs:
       - name: Publish package
         if: env.CLOUDSMITH_API_KEY != null
         run: |
+          UBUNTU_CODENAME=$(. /etc/os-release; echo "${UBUNTU_CODENAME/*, /}")
           cloudsmith push deb \
-            mull-project/mull-${{ steps.metadata.outputs.channel }}/${{ env.DISTR_REPO }} \
+            mull-project/mull-${{ steps.metadata.outputs.channel }}/ubuntu/${UBUNTU_CODENAME} \
             infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.deb
 
       - name: Move package
