--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        LLVM_VERSION: [13, 14, 15, 16, 17]
+        LLVM_VERSION: [13, 14, 15, 16, 17, 18]
 
     steps:
       - name: Debugging
