--- a/.devcontainer/ubuntu_20.04/Dockerfile
+++ b/.devcontainer/ubuntu_20.04/Dockerfile
@@ -1,1 +1,7 @@
 FROM ubuntu:20.04
+
+RUN apt-get install -y vim wget ninja-build \
+  libz-dev sqlite3 libsqlite3-dev \
+  ncurses-dev libstdc++6 \
+  binutils liblzma-dev \
+  cmake
