--- a/.devcontainer/ubuntu_20.04/Dockerfile
+++ b/.devcontainer/ubuntu_20.04/Dockerfile
@@ -1,5 +1,6 @@
 FROM ubuntu:20.04
 
+RUN apt-get update
 RUN apt-get install -y vim wget ninja-build \
   libz-dev sqlite3 libsqlite3-dev \
   ncurses-dev libstdc++6 \
